--- a/templates/add_person.html
+++ b/templates/add_person.html
@@ -1,30 +1,23 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Add Person</title>
-  <style>
-    .center {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    body{
-        background-color: #999999;
-    }
-  </style>
-</head>
-<body>
-  <div class="center">
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      <label>Name:</label>
-      <input type="text" name="name" required>
-      <br>
-      <label>Photo:</label>
-      <input type="file" name="photo" required>
-      <br><br>
-      <input type="submit" value="Submit">
-    </form>
-  </div>
-</body>
-</html>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+
+    <title>Add Person</title>
+    </head>
+    <body>
+    <div class="center">
+        <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <label>Name:</label>
+        <input type="text" name="name" required>
+        <br>
+        <label>Photo:</label>
+        <input type="file" name="photo" required>
+        <br><br>
+        <input type="submit" value="Submit">
+        </form>
+    </div>
+    </body>
+    </html>
